; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_pageout.c_upl_callout_iodone.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_pageout.c_upl_callout_iodone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.upl_io_completion* }
%struct.upl_io_completion = type { void (i8*, i32)*, i8*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @upl_callout_iodone(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.upl_io_completion*, align 8
  %4 = alloca void (i8*, i32)*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load %struct.upl_io_completion*, %struct.upl_io_completion** %6, align 8
  store %struct.upl_io_completion* %7, %struct.upl_io_completion** %3, align 8
  %8 = load %struct.upl_io_completion*, %struct.upl_io_completion** %3, align 8
  %9 = icmp ne %struct.upl_io_completion* %8, null
  br i1 %9, label %10, label %25

10:                                               ; preds = %1
  %11 = load %struct.upl_io_completion*, %struct.upl_io_completion** %3, align 8
  %12 = getelementptr inbounds %struct.upl_io_completion, %struct.upl_io_completion* %11, i32 0, i32 0
  %13 = load void (i8*, i32)*, void (i8*, i32)** %12, align 8
  store void (i8*, i32)* %13, void (i8*, i32)** %4, align 8
  %14 = load %struct.upl_io_completion*, %struct.upl_io_completion** %3, align 8
  %15 = getelementptr inbounds %struct.upl_io_completion, %struct.upl_io_completion* %14, i32 0, i32 0
  %16 = load void (i8*, i32)*, void (i8*, i32)** %15, align 8
  %17 = call i32 @assert(void (i8*, i32)* %16)
  %18 = load void (i8*, i32)*, void (i8*, i32)** %4, align 8
  %19 = load %struct.upl_io_completion*, %struct.upl_io_completion** %3, align 8
  %20 = getelementptr inbounds %struct.upl_io_completion, %struct.upl_io_completion* %19, i32 0, i32 1
  %21 = load i8*, i8** %20, align 8
  %22 = load %struct.upl_io_completion*, %struct.upl_io_completion** %3, align 8
  %23 = getelementptr inbounds %struct.upl_io_completion, %struct.upl_io_completion* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  call void %18(i8* %21, i32 %24)
  br label %25

25:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @assert(void (i8*, i32)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
